fixed custom image not showing

--- a/src/app/general/collection/collection.component.scss
+++ b/src/app/general/collection/collection.component.scss
@@ -78,16 +78,19 @@ $block-border: 5px solid white;
       &:nth-child(1) {
         border-left: $block-border;
         border-right: $block-border;
-        border-bottom-left-radius: $block-radius;
       }
 
       &:nth-child(2) {
         border-right: $block-border;
+        border-bottom-left-radius: 5px;
       }
 
       &:nth-child(3) {
         border-right: $block-border;
-        border-bottom-right-radius: $block-radius;
+      }
+
+      &:nth-child(4) {
+        border-bottom-right-radius: 5px;
       }
     }
   }
